--- a/BioCro/DARPA/biocro_opt_darpa.Rmd
+++ b/BioCro/DARPA/biocro_opt_darpa.Rmd
@@ -7,16 +7,15 @@ urlcolor: blue
 
 ### Walkthrough for optimizing using `DEoptim`
 
-Optimizing biomass coefficients so that biomass estimates from BioCro as 
-closely as possible match the measured biomass values. Parameters of interest are phenoParms, with thermal times and rhizome coefficients being fixed and leaf, stem, root, and grain coefficients being optimized across. This returns values of biomass for each stage and plant part, but the value being minimized is the difference between measured biomass values and biomass estimated by BioCro. It seems like we can optimized across all stages at once within our objective function. 
+Optimizing biomass coefficients so that biomass estimates from BioCro as closely as possible match the measured biomass values. Parameters of interest are phenoParms, with thermal times and rhizome coefficients being fixed and leaf, stem, root, and grain coefficients being optimized across. This returns values of biomass for each stage and plant part, but the value being minimized is the difference between measured biomass values and biomass estimated by BioCro. It seems like we can optimized across all stages at once within our objective function. 
 
 First read in all the necessary input data: 
 
 * BioCro config file
-* weather file created for biomass partitioning
-* biomass file from Setaria experiments
+* weather file created for biomass partitioning in [biocro_biomass_darpa.Rmd](https://github.com/az-digitalag/model-vignettes/blob/master/BioCro/DARPA/biocro_biomass_darpa.md)
+* biomass file from Setaria experiments in [biocro_biomass_darpa.Rmd](https://github.com/az-digitalag/model-vignettes/blob/master/BioCro/DARPA/biocro_biomass_darpa.md)
 
-```{r}
+```{r, message=FALSE}
 library(dplyr)
 
 rundir <- getwd()
@@ -45,44 +44,8 @@ OpBioGro_biomass <- read.csv("biocro_opt_darpa_files/OpBioGro_biomass.csv")
 
 We want biomass estimates from `BioGro` (i.e., ttt) to be as close to the actual biomass values as possible (i.e., OpBioGro_biomass). Will be optimizing over the parameters, which are the biomass coefficients. 
 
-TODO:
-
-* ~~Remove thermal times from biomass tables~~
-* (later) figure out better metric for comparing biomass values
-  * ~~sum of absolute value (because sign doesn't matter, magnitude of difference does)~~
-  * log transform
-  * ~~(ttt - OpBioGro_biomass) / OpBioGro_biomass~~
-* ~~upper and lower bounds are, initially, each between 0 and 1~~
-  * Can use more restricted bounds, base on BioCro defaults? 
-* ~~additional param constraints: parameter values for each stage should sum to one (note: this MUST happen because `BioCro` will not use pheno params that do not equal one)~~
-  * ~~fnMap argument is only for number of parameters constraints?~~ 
-  * ~~include something like the below, see `?DEoptim` for another example~~
-function(x){
- if(x[1:5] == 1){
- ifelse(x[6:10]){
- ...
- }
-}
-
-  * ~~another option for this sum to one constraint is something like the following for each stage as the first part of `opfn`~~
-
-```{r, eval=FALSE}
-z <- c(0.1, 0.2, 0.15)
-z[1:3]
-sum(z[1:3])
-z[1:3]/sum(z[1:3])
-sum(z[1:3]/sum(z[1:3]))
-```
-
-* ~~keep thermal times the same, can set them in the phenoControl line, and set rhizome values == 0~~
-
-* ~~phenoParms = vector of 25 values~~
-  * ~~split up parameters into the ones that will vary and the ones that will not. op parms = 19 values, thermal = 6, rhizome = 6~~
-  * ~~reassemble within opfn function~~
-* ~~Biomass measurements need to be in correct units (Mg/ha)~~
-
 First create objective function `opfn`, and include parameter values to test if this function by itself works. 
-```{r}
+```{r, message=FALSE}
 library(BioCro)
 
 opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){ 
@@ -191,7 +154,7 @@ opt_results <- DEoptim(fn = opfn, lower = c(rep(0, 2), rep(0.6, 4), 0.3, 0.1, re
 ```
 
 Test that the resulting parameter values produce the same biomass estimates. `parms_results` are the actual parameters that we would use because they've been adjusted for the sum to 1 constraint. 
-```{r}
+```{r, message=FALSE}
 library(ggplot2)
 
 parms_results <- as.vector(opt_results$optim$bestmem)
