--- a/BioCro/DARPA/biocro_1.0_darpa.Rmd
+++ b/BioCro/DARPA/biocro_1.0_darpa.Rmd
@@ -242,7 +242,8 @@ plot_biomass <- function(biomass_estimates){
   biomass_plot <- ggplot() +
     geom_point(data_plot, mapping = aes(x = ThermalT, y = value, color = name)) +
     geom_line(est_plot, mapping = aes(x = ThermalT, y = value, color = name)) +
-  xlim(c(0, 1800)) +
+  #xlim(c(0, 1800)) +
+  lims(x = c(0, 1800), y = c(0, 2)) +
   labs(x = "Thermal Time", y = "Biomass (Ma/ha)", color = "Plant Part") +
   theme_classic() +
   facet_wrap(~name)
@@ -255,61 +256,21 @@ plot_biomass(setaria_result)
 
 #### Set up and test objective function
 
-k_params are part of setaria_parameters (`setaria_parameters[53:82]`). kRhizome6 has to be zero?
-
-What's below isn't actually optimizing, as each iteration has the same values. 
-```{r, eval=FALSE}
+```{r}
 nonk_params <- setaria_parameters[-c(53:80, 82)]
 opfn <- function(k_params){
-  k_params <- with(list(), {
-  datalines =
-    "symbol value
-    kStem1 0.312482562
-    kLeaf1 0.350204711
-    kRoot1 0.337312727
-    kRhizome1 0
-    kGrain1 0
-    kStem2 0.28215246
-    kLeaf2 0.385131018
-    kRoot2 0.332716522
-    kRhizome2 0
-    kGrain2 0
-    kStem3 0.449611092
-    kLeaf3 0.549167954
-    kRoot3 0.001220954
-    kRhizome3 0
-    kGrain3 0
-    kStem4 0.450730685
-    kLeaf4 0.38210712
-    kRoot4 0.167162195
-    kRhizome4 0
-    kGrain4 0
-    kStem5 0.687613079
-    kLeaf5 0.197814203
-    kRoot5 0.114572719
-    kRhizome5 0
-    kGrain5 0
-    kStem6 0.758825523
-    kLeaf6 0.01127437
-    kRoot6 0.143217809
-    kGrain6 0.086682298"
-  
-  data_frame = utils::read.table(textConnection(datalines), header=TRUE)
-  values = as.list(data_frame$value)
-  names(values) = data_frame$symbol
-  values
-})
+  k_params_names <- names(setaria_parameters[c(53:80, 82)])
+  length(k_params) <- length(k_params_names)
   all_params <- c(nonk_params, k_params)
-  #print(all_params)
+  names(all_params)[78:106] <- k_params_names
   t <- Gro(setaria_initial_state,
            all_params,
            get_growing_season_climate(OpBioGro_weather),
            sorghum_modules)
-  #plot_biomass(t)
-  tt <- t %>% 
-    select(TTc, Stem, Leaf, Root, Rhizome, Grain) %>% 
+  tt <- t %>%
+    select(TTc, Stem, Leaf, Root, Rhizome, Grain) %>%
     rename(ThermalT = TTc)
-  ttt <- tt %>% 
+  ttt <- tt %>%
     filter(round(tt$ThermalT) %in% round(OpBioGro_biomass$ThermalT))
   bio_ests <- select(ttt, -ThermalT)
   bio_meas <- select(OpBioGro_biomass, -ThermalT, -LAI)
@@ -317,12 +278,14 @@ opfn <- function(k_params){
   return(sum(diff))
 }
 
-# setaria_k_params <- setaria_parameters[c(53:80, 82)]
-# for(i in 1:length(setaria_k_params)){
-#   setaria_k_params[[i]] <- 0.2
-# }
-# opfn(setaria_k_params)
+k_params_ex <- setaria_parameters[c(53:80, 82)]
+for(i in 1:length(k_params_ex)){
+  k_params_ex[[i]] <- 0.2
+}
+opfn(k_params_ex)
+```
 
+```{r}
 library(DEoptim)
 opt_results <- DEoptim(fn = opfn, lower = rep(0, 29), upper = rep(1, 29), control = DEoptim.control(itermax = 2))
 ```
@@ -339,5 +302,3 @@ results_test <- Gro(setaria_initial_state,
 
 plot_biomass(results_test)
 ```
-
-
