Improve description of optimization

--- a/BioCro/DARPA/biocro_1.0_darpa.Rmd
+++ b/BioCro/DARPA/biocro_1.0_darpa.Rmd
@@ -7,6 +7,12 @@ urlcolor: blue
 
 ### Switching between BioCro versions locally
 
+Needs to be run using BioCro version 1.0. Check your BioCro version: 
+```{r, message=FALSE}
+library(BioCro)
+sessionInfo()
+```
+
 Download repos for [BioCro 0.95](https://github.com/ebimodeling/biocro) and [BioCro 1.0](https://github.com/ebimodeling/biocro/tree/new-framework), and place unzipped folders into this repo in `BioCro/DARPA`. Use the code below to switch between these two versions when needs. 
 
 BioCro 0.95: 
@@ -29,6 +35,7 @@ sessionInfo()
 
 #### Read in data
 
+These two dataframes include hourly weather data for a year that match the conditions the *Setaria* plants were grown in, and measured biomass values for plants at six harvest dates. The former will be used to run the model and the latter to tune the model parameters. 
 ```{r}
 library(dplyr)
 OpBioGro_weather <- read.csv("biocro_opt_darpa_files/OpBioGro_weather.csv") %>% 
@@ -40,7 +47,7 @@ OpBioGro_biomass <- read.csv("biocro_opt_darpa_files/OpBioGro_biomass.csv")
 
 The following code uses BioCro 1.0. 
 
-Set up the parameters for *Setaria* with these two lists, `setaria_initial_state` and `setaria_parameters`. This uses parameter values from optimizing the older version of BioCro. 
+Set up the parameters for *Setaria* using these two lists, `setaria_initial_state` and `setaria_parameters`. This uses parameter values from optimizing the older version of BioCro. 
 ```{r, message=FALSE}
 setaria_initial_state <- with(list(), {
   datalines =
@@ -206,7 +213,7 @@ setaria_parameters <- with(list(), {
 
 Create the modules, which are currently developed for *Sorghum*. 
 ```{r}
-sorghum_modules <- list(canopy_module_name='c4_canopy',
+setaria_modules <- list(canopy_module_name='c4_canopy',
                        soil_module_name='one_layer_soil_profile',
                        growth_module_name='partitioning_growth',
                        senescence_module_name='thermal_time_senescence',
@@ -216,18 +223,18 @@ sorghum_modules <- list(canopy_module_name='c4_canopy',
 
 #### Run model 
 
-Use these three inputs, along with a weather file included with the package, to generate biomass values for **Setaria**. 
+Use these three inputs, along with the weather data, to generate biomass values for **Setaria**. 
 
 ```{r}
-setaria_result <- Gro(setaria_initial_state, 
-                      setaria_parameters, 
-                      get_growing_season_climate(OpBioGro_weather), 
-                      sorghum_modules)
+biomass_set_params <- Gro(setaria_initial_state, 
+                          setaria_parameters,
+                          get_growing_season_climate(OpBioGro_weather), 
+                          setaria_modules)
 ```
 
 #### Plot results with data
 
-We are plotting the estimated biomass values from BioCro with the measured values that were used to estimate the parameters, in order to compare them. 
+We are plotting the estimated biomass values from BioCro with the measured values that were used to estimate the parameters, in order to compare them. The biomass estimates from the model do not track the measured values very well. 
 
 ```{r, message=FALSE}
 library(ggplot2)
@@ -241,21 +248,28 @@ plot_biomass <- function(biomass_estimates){
     tidyr::pivot_longer(Stem:Grain)
   biomass_plot <- ggplot() +
     geom_point(data_plot, mapping = aes(x = ThermalT, y = value, color = name)) +
-    geom_line(est_plot, mapping = aes(x = ThermalT, y = value, color = name)) +
-  #xlim(c(0, 1800)) +
-  lims(x = c(0, 1800), y = c(0, 2)) +
-  labs(x = "Thermal Time", y = "Biomass (Ma/ha)", color = "Plant Part") +
-  theme_classic() +
-  facet_wrap(~name)
+    geom_line(est_plot, mapping = aes(x = ThermalT, y = value, color = name)) + 
+    lims(x = c(0, 1800), y = c(0, 2)) +
+    labs(x = "Thermal Time", y = "Biomass (Ma/ha)", color = "Plant Part") + 
+    theme_classic() +
+    theme(legend.position = "none") +
+    facet_wrap(~name)
   print(biomass_plot)
 }
-plot_biomass(setaria_result)
+plot_set_params <- plot_biomass(biomass_set_params)
 ```
 
 ### Optimizing `Gro` for *Setaria* parameters
 
+This optimizes the biomass coefficients so that BioCro biomass estimates better match the measured values. Parameters that are optimized are the leaf, stem, root, and grain coefficients (e.g., `kStem1`), not including the value for the sixth rhizome stage (`kRhizome6`), which must be zero. 
+
+The optimization returns these values for biomass growth by plant part and stage where the difference between measured and estimated biomass values is minimized. We optimized across all six stages simultaneously. 
+
 #### Set up and test objective function
 
+First the objective function `opfn` is created, which has its only argument as the parameters to be optimized over, called `k_params`. 
+
+The function is tested with example parameters, which are all set to 0.2. 
 ```{r}
 nonk_params <- setaria_parameters[-c(53:80, 82)]
 opfn <- function(k_params){
@@ -266,7 +280,7 @@ opfn <- function(k_params){
   t <- Gro(setaria_initial_state,
            all_params,
            get_growing_season_climate(OpBioGro_weather),
-           sorghum_modules)
+           setaria_modules)
   tt <- t %>%
     select(TTc, Stem, Leaf, Root, Rhizome, Grain) %>%
     rename(ThermalT = TTc)
@@ -285,20 +299,30 @@ for(i in 1:length(k_params_ex)){
 opfn(k_params_ex)
 ```
 
+#### Run optimization and plot
+
+The objective function is run through optimization with `DEoptim`, with upper and lower bounds for the parameters set to 0 and 1. The `itermax` value is set low enough for this to complete in a few minutes, though the difference is increasingly minimized with more iterations. 
 ```{r}
 library(DEoptim)
 opt_results <- DEoptim(fn = opfn, lower = rep(0, 29), upper = rep(1, 29), control = DEoptim.control(itermax = 2))
 ```
 
+The resulting optimized parameters are put through the model again, and the resulting biomass estimates are plotted agaist the measured values. 
 ```{r}
 optimal_k_params <- as.list(opt_results$optim$bestmem)
 names(optimal_k_params) <- names(setaria_parameters[c(53:80, 82)])
 optimal_params <- c(nonk_params, optimal_k_params)
 
-results_test <- Gro(setaria_initial_state, 
-                    optimal_params,
-                    get_growing_season_climate(OpBioGro_weather), 
-                    sorghum_modules)
+biomass_opt_parms <- Gro(setaria_initial_state, 
+                         optimal_params,
+                         get_growing_season_climate(OpBioGro_weather),
+                         setaria_modules)
 
-plot_biomass(results_test)
+plot_opt_params <- plot_biomass(biomass_opt_parms)
+```
+
+The optimization has improved the fit compared to the previously used parameter values. See results from set parameters on the left and optimized parameters results on the right. 
+```{r}
+library(cowplot)
+plot_grid(plot_set_params, plot_opt_params)
 ```
