--- a/BioCro/DARPA/biocro_1.0_darpa.Rmd
+++ b/BioCro/DARPA/biocro_1.0_darpa.Rmd
@@ -271,12 +271,14 @@ First the objective function `opfn` is created, which has its only argument as t
 
 The function is tested with example parameters, which are all set to 0.2. 
 ```{r}
-nonk_params <- setaria_parameters[-c(53:80, 82)]
+k_params_index <- c(53:55, 58:60, 63:65, 68:70, 73:75, 78:80, 82)
+nonk_params <- setaria_parameters[-k_params_index]
+
 opfn <- function(k_params){
-  k_params_names <- names(setaria_parameters[c(53:80, 82)])
+  k_params_names <- names(setaria_parameters[k_params_index])
   length(k_params) <- length(k_params_names)
   all_params <- c(nonk_params, k_params)
-  names(all_params)[78:106] <- k_params_names
+  names(all_params)[88:106] <- k_params_names
   t <- Gro(setaria_initial_state,
            all_params,
            get_growing_season_climate(OpBioGro_weather),
@@ -292,7 +294,7 @@ opfn <- function(k_params){
   return(sum(diff))
 }
 
-k_params_ex <- setaria_parameters[c(53:80, 82)]
+k_params_ex <- setaria_parameters[k_params_index]
 for(i in 1:length(k_params_ex)){
   k_params_ex[[i]] <- 0.2
 }
@@ -304,13 +306,13 @@ opfn(k_params_ex)
 The objective function is run through optimization with `DEoptim`, with upper and lower bounds for the parameters set to 0 and 1. The `itermax` value is set low enough for this to complete in a few minutes, though the difference is increasingly minimized with more iterations. 
 ```{r}
 library(DEoptim)
-opt_results <- DEoptim(fn = opfn, lower = rep(0, 29), upper = rep(1, 29), control = DEoptim.control(itermax = 2))
+opt_results <- DEoptim(fn = opfn, lower = rep(0, 19), upper = rep(1, 19), control = DEoptim.control(itermax = 2))
 ```
 
 The resulting optimized parameters are put through the model again, and the resulting biomass estimates are plotted agaist the measured values. 
 ```{r}
 optimal_k_params <- as.list(opt_results$optim$bestmem)
-names(optimal_k_params) <- names(setaria_parameters[c(53:80, 82)])
+names(optimal_k_params) <- names(setaria_parameters[k_params_index])
 optimal_params <- c(nonk_params, optimal_k_params)
 
 biomass_opt_parms <- Gro(setaria_initial_state, 
