--- a/BioCro/DARPA/biocro_1.0_darpa.Rmd
+++ b/BioCro/DARPA/biocro_1.0_darpa.Rmd
@@ -277,6 +277,18 @@ nonk_params <- setaria_parameters[-k_params_index]
 opfn <- function(k_params){
   k_params_names <- names(setaria_parameters[k_params_index])
   length(k_params) <- length(k_params_names)
+  k_params_vec <- unlist(k_params)
+  k_params[1:3] <- as.list(k_params_vec[1:3]/sum(k_params_vec[1:3]))
+  k_params_vec <- unlist(k_params)
+  k_params[4:6] <- as.list(k_params_vec[4:6]/sum(k_params_vec[4:6]))
+  k_params_vec <- unlist(k_params)
+  k_params[7:9] <- as.list(k_params_vec[7:9]/sum(k_params_vec[7:9]))
+  k_params_vec <- unlist(k_params)
+  k_params[10:12] <- as.list(k_params_vec[10:12]/sum(k_params_vec[10:12]))
+  k_params_vec <- unlist(k_params)
+  k_params[13:15] <- as.list(k_params_vec[13:15]/sum(k_params_vec[13:15]))
+  k_params_vec <- unlist(k_params)
+  k_params[16:19] <- as.list(k_params_vec[16:19]/sum(k_params_vec[16:19]))
   all_params <- c(nonk_params, k_params)
   names(all_params)[88:106] <- k_params_names
   t <- Gro(setaria_initial_state,
@@ -313,6 +325,20 @@ The resulting optimized parameters are put through the model again, and the resu
 ```{r}
 optimal_k_params <- as.list(opt_results$optim$bestmem)
 names(optimal_k_params) <- names(setaria_parameters[k_params_index])
+
+opt_vec <- unlist(optimal_k_params)
+optimal_k_params[1:3] <- as.list(opt_vec[1:3]/sum(opt_vec[1:3]))
+opt_vec <- unlist(optimal_k_params)
+optimal_k_params[4:6] <- as.list(opt_vec[4:6]/sum(opt_vec[4:6]))
+opt_vec <- unlist(optimal_k_params)
+optimal_k_params[7:9] <- as.list(opt_vec[7:9]/sum(opt_vec[7:9]))
+opt_vec <- unlist(optimal_k_params)
+optimal_k_params[10:12] <- as.list(opt_vec[10:12]/sum(opt_vec[10:12]))
+opt_vec <- unlist(optimal_k_params)
+optimal_k_params[13:15] <- as.list(opt_vec[13:15]/sum(opt_vec[13:15]))
+opt_vec <- unlist(optimal_k_params)
+optimal_k_params[16:19] <- as.list(opt_vec[16:19]/sum(opt_vec[16:19]))
+
 optimal_params <- c(nonk_params, optimal_k_params)
 
 biomass_opt_parms <- Gro(setaria_initial_state, 
