removed information about biocro 0.95

--- a/BioCro/DARPA/biocro_1.0_darpa.Rmd
+++ b/BioCro/DARPA/biocro_1.0_darpa.Rmd
@@ -8,27 +8,16 @@ urlcolor: blue
 ### Switching between BioCro versions locally
 
 Needs to be run using BioCro version 1.0. Check your BioCro version: 
+
 ```{r, message=FALSE}
 library(BioCro)
-sessionInfo()
-```
+if(!packageVersion(pkg = 'BioCro') >= 1.0){
+  warning("need to use BioCro v1.0 or greater")
+} else {
+  #devtools::install_github('ebimodeling/biocro-dev')
+  devtools::install_github('ebimodeling/biocro@new-framework')  
+}
 
-Download repos for [BioCro 0.95](https://github.com/ebimodeling/biocro) and [BioCro 1.0](https://github.com/ebimodeling/biocro/tree/new-framework), and place unzipped folders into this repo in `BioCro/DARPA`. Use the code below to switch between these two versions when needs. 
-
-BioCro 0.95: 
-```{r, eval=FALSE}
-install.packages('biocro_0.95/biocro-master', repos = NULL, type = 'SOURCE')
-```
-
-BioCro 1.0: 
-```{r, message=FALSE}
-install.packages('biocro_1.00/biocro-new-framework', repos = NULL, type = 'SOURCE')
-```
-
-Check version: 
-```{r, message=FALSE}
-library(BioCro)
-sessionInfo()
 ```
 
 ### Read in data
