--- a/BioCro/DARPA/pecan_runs.Rmd
+++ b/BioCro/DARPA/pecan_runs.Rmd
@@ -336,8 +336,8 @@ ggplot(data = daily_bio) +
 ```
 
 ```{r, echo=FALSE, out.width="400px"}
-knitr::include_graphics("biocro_biomass_welsch_setaria.png")
-knitr::include_graphics("biocro_biomass_ts_welsch_setaria.png")
+knitr::include_graphics("pecan_runs_images/1.png")
+knitr::include_graphics("pecan_runs_images/2.png")
 ```
 
 # Section 2: BioCro Run for Multiple *Setaria* Cultivars
@@ -887,8 +887,8 @@ p
 ```
 
 ```{r, echo=FALSE, out.width="400px"}
-knitr::include_graphics("biocro_params_welsch_setaria_2cults.png")
-knitr::include_graphics("biocro_savd_welsch_setaria_2cults.png")
-knitr::include_graphics("biocro_biomass_welsch_setaria_2cults.png")
-knitr::include_graphics("biocro_biomass_ts_welsch_setaria_2cults.png")
+knitr::include_graphics("pecan_runs_images/3.png")
+knitr::include_graphics("pecan_runs_images/4.png")
+knitr::include_graphics("pecan_runs_images/5.png")
+knitr::include_graphics("pecan_runs_images/6.png")
 ```
